--- a/app/views/@shared/_page_heading.html.erb
+++ b/app/views/@shared/_page_heading.html.erb
@@ -97,6 +97,7 @@
                       <li><%= link_to "View Profile", user_path(current_user), class: "nav-link u-header__sub-menu-nav-link" %></li>
                       <li><%= link_to "Edit Profile", edit_user_path(current_user), class: "nav-link u-header__sub-menu-nav-link" %></li>
                       <li><%= link_to "Change password", edit_user_passwords_path, class: "nav-link u-header__sub-menu-nav-link" %></li>
+                      <li><%= link_to "Referrals", referrals_path, class: "nav-link u-header__sub-menu-nav-link" %></li>
                     </ul>
                   </li>
 
