--- a/app/views/referrals/index.html.erb
+++ b/app/views/referrals/index.html.erb
@@ -64,16 +64,12 @@
           <h3 class="h5 border-bottom pb-2">Referral Stats</h3>
           <ul class="list-group list-group-borderless list-group-flush">
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              Invite Link Clicks
+              Referral Clicks
               <span><%= current_user.referral_click_count %></span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              "Powered By" Clicks
-              <span><%= current_user.referral_click_count %></span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              Total Referrals
-              <span><%= User.where(referring_user_id: current_user.id).count %></span>
+              Referrals
+              <span><%= current_user.referred_users.count %></span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
               Earned
